[gd_scene load_steps=10 format=3 uid="uid://45x12j7e2oja"]

[ext_resource type="Script" path="res://src/timeline/LayerColumn.gd" id="1_7pfj2"]
[ext_resource type="Script" path="res://src/timeline/LayerBar.gd" id="2_coiyk"]
[ext_resource type="Texture2D" uid="uid://1tbvgkny8w7s" path="res://assets/icons/unlink.png" id="3_e03as"]
[ext_resource type="Script" path="res://src/widgets/IconToggleBtn.gd" id="4_t84bk"]
[ext_resource type="Texture2D" uid="uid://bu7d8v1voeon6" path="res://assets/icons/linked.png" id="5_oi2ui"]
[ext_resource type="Texture2D" uid="uid://djd6jmojrvo5h" path="res://assets/icons/eye-open.png" id="6_eh3lx"]
[ext_resource type="Texture2D" uid="uid://obg38undtpdg" path="res://assets/icons/eye-close.png" id="7_eyvih"]
[ext_resource type="Texture2D" uid="uid://do5d6ttn322c5" path="res://assets/icons/unlock.png" id="8_ytwls"]
[ext_resource type="Texture2D" uid="uid://mfegu31r5d7t" path="res://assets/icons/locked.png" id="9_entfx"]

[node name="LayerColumn" type="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
script = ExtResource("1_7pfj2")

[node name="label-layers" type="Label" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
text = "Layers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LayerBar" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
script = ExtResource("2_coiyk")

[node name="row" type="HBoxContainer" parent="LayerBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnLink" type="Button" parent="LayerBar/row"]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("3_e03as")
icon_alignment = 1
script = ExtResource("4_t84bk")
ico_on = ExtResource("5_oi2ui")
ico_off = ExtResource("3_e03as")

[node name="BtnVisible" type="Button" parent="LayerBar/row"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("6_eh3lx")
icon_alignment = 1
script = ExtResource("4_t84bk")
is_pressed = true
ico_on = ExtResource("6_eh3lx")
ico_off = ExtResource("7_eyvih")

[node name="BtnLock" type="Button" parent="LayerBar/row"]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("8_ytwls")
icon_alignment = 1
script = ExtResource("4_t84bk")
ico_on = ExtResource("9_entfx")
ico_off = ExtResource("8_ytwls")

[node name="LayerName" type="LineEdit" parent="LayerBar/row"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"CaptionEdit"
text = "Layer"
max_length = 6
